--- a/kernels/events.Rmd
+++ b/kernels/events.Rmd
@@ -4,8 +4,11 @@ output: html_notebook
 ---
 
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(fig.width=15, fig.height=10, echo = TRUE, message = TRUE, warning = FALSE)
+```
 
-```{r message=FALSE,  echo=FALSE,  warning=FALSE, include=TRUE}
+```{r}
 library(tidyverse)
 ```
 
@@ -35,7 +38,7 @@ events <- read.csv(events.file) %>%
 
 
 
-```{r message=FALSE,  echo=FALSE, warning=FALSE, include=TRUE}
+```{r}
 
 events$event_type <- factor(events$event_type, levels=c(0,1,2,3,4,5,6,7,8,9,10,11), labels=c('Annoucement', 'Attempt','Corner','Foul', 'Yellow Card', 'Second Yellow Card', 'Red Card', 'Substitution', 'Free kick won', 'Offside', 'Hand Ball', 'Penalty Conceded'))
 
@@ -64,7 +67,7 @@ events$situation <- factor(events$situation, levels=c(1,2,3,4), labels=c('Open P
 
 
 
-```{r fig.height=10, fig.width=15}
+```{r}
 events %>%
   group_by(time) %>%
   summarize(n=n()) %>%
@@ -76,7 +79,7 @@ events %>%
 
 
 
-```{r fig.height=10, fig.width=15}
+```{r}
 events %>%
   select(time, event_type) %>%
   gather(-time, key = "var", value = 'val') %>%
@@ -100,7 +103,7 @@ events %>%
 
 
 
-```{r fig.width=20}
+```{r}
 events %>%
   select(sixth, event_type) %>%
   gather(-sixth, key = "var", value = 'val') %>%
