--- a/kernels/eda.Rmd
+++ b/kernels/eda.Rmd
@@ -4,7 +4,11 @@ output: html_notebook
 ---
 
 
-```{r message=FALSE,  echo=FALSE,  warning=FALSE, include=TRUE}
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(fig.width=15, fig.height=10, echo = TRUE, message = TRUE, warning = FALSE)
+```
+
+```{r}
 library(tidyverse)
 ```
 
@@ -26,15 +30,14 @@ if(!file.exists(ginf.file)){
 }
 
 
-ginf  <-  read.csv(ginf.file)
+ginf  <-  read_csv(ginf.file)
 
-events <- read.csv(events.file) %>%
-              inner_join(ginf)
+events <- read_csv(events.file)
 ```
 
 
 
-```{r message=FALSE,  echo=FALSE, warning=FALSE, include=TRUE}
+```{r}
 
 events$event_type <- factor(events$event_type, levels=c(0,1,2,3,4,5,6,7,8,9,10,11), labels=c('Annoucement', 'Attempt','Corner','Foul', 'Yellow Card', 'Second Yellow Card', 'Red Card', 'Substitution', 'Free kick won', 'Offside', 'Hand Ball', 'Penalty Conceded'))
 
@@ -79,8 +82,9 @@ filter(!is.na(situation))
 ```
 
 
-```{r fig.height=10, fig.width=20, warning=FALSE}
+```{r}
 events %>% 
+  filter(event_type=='Attempt') %>%
  mutate(id=row_number()) %>%
  gather(-id, key = "key", value = "val") %>%
  mutate(isna = is.na(val)) %>%
