--- a/kernels/substitutions.Rmd
+++ b/kernels/substitutions.Rmd
@@ -4,7 +4,13 @@ title: "Substitutions"
 output: html_notebook
 ---
 
-```{r message=FALSE,  echo=FALSE,  warning=FALSE, include=TRUE}
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(fig.width=15, fig.height=10, echo = TRUE, message = TRUE, warning = FALSE)
+```
+
+```{r}
 library(tidyverse)
 ```
 
@@ -34,7 +40,7 @@ events <- read.csv(events.file) %>%
 
 
 
-```{r message=FALSE,  echo=FALSE, warning=FALSE, include=TRUE}
+```{r}
 
 events$event_type <- factor(events$event_type, levels=c(0,1,2,3,4,5,6,7,8,9,10,11), labels=c('Annoucement', 'Attempt','Corner','Foul', 'Yellow Card', 'Second Yellow Card', 'Red Card', 'Substitution', 'Free kick won', 'Offside', 'Hand Ball', 'Penalty Conceded'))
 
@@ -79,5 +85,4 @@ joker <- substitutions %>%
             group_by(player_in) %>%
             summarize(n=n())
 ```
-
 
